<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:title="@string/settings_preference_order_by_title"
        android:key="@string/settings_preference_order_by_key"
        android:defaultValue="@string/settings_preference_order_by_default"
        android:entries="@array/settings_order_by_labels"
        android:entryValues="@array/settings_order_by_values"/>

    <ListPreference
        android:title="@string/settings_preference_movie_number_title"
        android:key="@string/settings_preference_movie_number_key"
        android:defaultValue="@string/settings_preference_movie_number_default"
        android:entries="@array/settings_movie_number_labels"
        android:entryValues="@array/settings_movie_number_values"/>

</PreferenceScreen>