<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".Activities.MovieDetailActivity">


        <TextView
            android:id="@+id/movie_title_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/colorAccent"
            android:gravity="center"
            android:padding="15dp"
            android:textColor="@color/movieTitle"
            android:textSize="42sp"
            android:textStyle="bold"
            app:fontFamily="@font/alegreya_sc"
            tools:text="TITLE" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:id="@+id/movie_poster_image_view"
                android:layout_width="170dp"
                android:layout_height="170dp"/>

            <android.support.constraint.ConstraintLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/movie_release_date_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="12dp"
                    android:textSize="30sp"
                    android:textStyle="italic|bold"
                    app:layout_constraintEnd_toStartOf="@+id/favorites_button"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="2018" />

                <Button
                    android:id="@+id/favorites_button"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginRight="12dp"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/favorite_button_not_marked_24dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/user_rating_label_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/user_rating_label"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/movie_release_date_text_view" />

                <TextView
                    android:id="@+id/movie_user_rating_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/user_rating_label_text_view"
                    app:layout_constraintStart_toEndOf="@+id/user_rating_label_text_view"
                    app:layout_constraintTop_toTopOf="@+id/user_rating_label_text_view"
                    tools:text="7.2" />

                <TextView
                    android:id="@+id/user_rating_helper_label_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_rating_helper_label"
                    app:layout_constraintBottom_toBottomOf="@+id/movie_user_rating_text_view"
                    app:layout_constraintStart_toEndOf="@+id/movie_user_rating_text_view"
                    app:layout_constraintTop_toTopOf="@+id/movie_user_rating_text_view" />

                <TextView
                    android:id="@+id/movie_user_vote_count_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/voteCountColor"
                    android:textSize="12sp"
                    android:textStyle="italic"
                    app:layout_constraintEnd_toEndOf="@+id/user_rating_helper_label_text_view"
                    app:layout_constraintStart_toStartOf="@+id/movie_user_rating_text_view"
                    app:layout_constraintTop_toBottomOf="@+id/movie_user_rating_text_view"
                    tools:text="12579" />

                <LinearLayout
                    android:id="@+id/movie_trailer_container_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="44dp"
                    android:gravity="center"
                    android:background="@drawable/movie_selector"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <ImageView
                        android:id="@+id/movie_trailer_icon_image_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_play_circle_filled_black_24dp"
                        />

                    <TextView
                        android:id="@+id/movie_trailer_label_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/movie_trailer_label"
 />
                </LinearLayout>

            </android.support.constraint.ConstraintLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/movie_overview_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_margin="10dp"
            tools:text="A volcanic eruption threatens the remaining dinosaurs on the island of Isla Nublar, where the creatures have freely roamed for several years after the demise of an animal theme park known as Jurassic World. Claire Dearing, the former park manager, has now founded the Dinosaur Protection Group, an organization dedicated to protecting the dinosaurs. To help with her cause, Claire has recruited Owen Grady, a former dinosaur trainer who worked at the park, to prevent the extinction of the dinosaurs once again."/>

        <TextView
            android:id="@+id/reviews_label_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/reviews_label"
            android:textSize="18sp"
            app:fontFamily="@font/alegreya_sc"
            android:textStyle="italic"
            android:layout_margin="10dp"/>
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ListView
                android:id="@+id/reviews_list_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </ListView>

            <TextView
                android:id="@+id/no_reviews_text_view"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_reviews_message"/>
        </FrameLayout>
    </LinearLayout>
</ScrollView>
